--- a/index.html
+++ b/index.html
@@ -1,2 +1,73 @@
-# rayheins.github.io
-Personal Website
+<!--rayheins.github.io
+Personal Website-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>HTML links</title>
+      <style>
+        #main {
+  background-color: #e6ffcc;
+}
+
+h1 {
+  text-align: center;
+  font-size: 70px;
+  font-family: Tangerine;
+  
+}
+
+h2{
+  text-align: center;
+  font-size: 40px;
+  font-family: Tangerine;
+  
+}
+
+#img-div {
+  width: 300px;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+}
+
+#image {
+   max-width: 40%;
+   display: block;
+   margin: auto; 
+}
+
+#img-caption {
+  text-align: center;
+  font-size: 20px;
+  font-family: Gotu;
+}
+
+#tribute-info {
+  margin: 0 px 300px 0px 200px;
+  font-family: Gotu;
+  font-size: 20px;
+}
+      </style>
+    </head>
+
+<div id="main">
+  <div id="title">
+    <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" type="text/css">
+    <h1>J. R. R. Tolkien</h1>
+  </div>
+  <h2>Creator of The Hobbit and The Lord of the Rings</h2>
+  <div id="img-div">
+    <img id="image"
+       src=https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQ7yimUOMYZZW4zGwl2nWW4bU8Iu3EFLeMwMkpo_1jY0j4Lp791&usqp=CAU>
+    <figcaption id="img-caption">Tolkien with his pipe
+    </figcaption>
+    
+  </div>
+  <div id="tribute-info">
+    <p><a id="tribute-link" href="https://en.wikipedia.org/wiki/J._R._R._Tolkien" target="_blank">J.R.R. Tolkien</a>, in full John Ronald Reuel Tolkien, (born January 3, 1892, Bloemfontein, South Africa—died September 2, 1973, Bournemouth, Hampshire, England), English writer and scholar who achieved fame with his children's book The Hobbit (1937) and his richly inventive epic fantasy The Lord of the Rings (1954–55)(Brittanica).</p>
+    </div>
+    
+</div>
+</html>
